# cosmo_utils

./: .gitignore  README.md  pyproject.toml
src/cosmo_utils/: catalogs.py  cosmology.py  filters_et_functions.py  utils.py
src/cosmo_utils/config/: fs2_cosmology.json  raygal_cosmology.json  raygal_wcdm_cosmology.json  raygal_zeff_halos.json  raygal_zeff_particles.json  raygal_zeff_z0_halos.json
src/lp_utils/: catalogs.py  cosmology.py  filters_et_functions.py  lp_analysis.py  utils.py
src/lp_utils/config/setup_fit/: test.json  test0.json  test_parallel.json
src/lp_utils/scripts/: setup_fit.py  setup_fit_parallel.py
tests/: compare_funcs_in_out_cosmo_class.py  test_growth_colossus.ipynb
