[project]
name = "lp-utils"
version = "0.1.0"
description = "Utilities BAO Linear Point analysis (catalogues, covariance matrices, cosmology computations etc.)"
readme = "README.md"
authors = [
    { name = "Angelo Ferrari", email = "anferrar@bo.infn.it" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mcfit>=0.0.22",
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "pytest>=8.4.1",
    "scipy>=1.15.2",
]

[project.scripts]
lp-utils = "lp_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lp-utils",
]

[tool.uv.sources]
lp-utils = { workspace = true }
